--- a/notes.html
+++ b/notes.html
@@ -108,15 +108,12 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.1.12</h2>
+<h2 id="toc_1">3.1.13</h2>
 
 <ul>
-<li>Fix crashes induced by some URLs</li>
-<li>Fix crash on macOS 10.13 High Sierra related to Activity window</li>
-<li>Fix unwanted reload of the article currently being read during sync</li>
-<li>Fix selection of current article on change of sort criterion/order</li>
-<li>Fix bug where Vienna doesn&#39;t quit when you press ‘Quit Vienna’ in the Database Upgrade window</li>
-<li>Truncate long text items with an ellipsis</li>
+<li>Fixes related to searching and smart folders</li>
+<li>Fix for selection of first article when jumping on next feed</li>
+<li>Better fix for unwanted reload of the article currently being read during sync</li>
 </ul>
 
 
