--- a/notes.html
+++ b/notes.html
@@ -112,7 +112,7 @@ sup {
 
 <ul>
 <li>Fix article list not scrolling to top when selecting a folder</li>
-<li>Fix &#39;Skip folder&#39; to not select the first article of the following folder if in the current folder, no article is selected</li>
+<li>Fix &#39;Skip Folder&#39; not selecting the first unread article in the next folder with unread articles</li>
 </ul>
 
 <h2 id="toc_2">3.1.14</h2>
