--- a/notes.html
+++ b/notes.html
@@ -108,14 +108,30 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.1.8</h2>
+<h2 id="toc_1">3.2.0 Beta 1</h2>
+
+<h3 id="toc_2">! For OS X 10.9 or later only !</h3>
 
 <ul>
-<li>Fixed an External XML Entity (XXE) vulnerability which allowed servers to steal the content of files on the machine running Vienna</li>
-<li>Fix incorrect escaping of OPML export</li>
-<li>Fix font preferences not working</li>
-<li>Fix error on unread articles count with OpenReader feeds</li>
-<li>Fix articles&#39; list during feed refreshes when the current selection is a smart or group folder </li>
+<li>New toolbar icons</li>
+<li>Use default external application to view content of cached XML files</li>
+<li>Show acknowledgements in &quot;About&quot; panel</li>
+<li>Technical updates :
+
+<ul>
+<li>Converted NIBs to XIBs and to Auto Layout</li>
+<li>Moved translation system to Base localization and Crowdin</li>
+<li>Refactored some UI elements to separate XIB files</li>
+<li>Refactorings (to KVO or delegate patterns, and conversion of various elements to properties)</li>
+<li>Change OpenReader to use asynchronous requests</li>
+<li>Update to Xcode 9</li>
+<li>Conversion of code for some UI elements to Swift4</li>
+<li>Replace CDEvents with Swift-based FSEvents implementation</li>
+<li>Update autorevision to 1.20</li>
+<li>Update Sparkle to 1.18.1</li>
+<li>Update MASPreferences to 1.3.0</li>
+<li>plus various housekeeping changes…</li>
+</ul></li>
 </ul>
 
 
