--- a/notes.html
+++ b/notes.html
@@ -108,9 +108,15 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.2.0 Beta 1</h2>
+<h2 id="toc_1">3.2.0 Beta 2</h2>
 
 <h3 id="toc_2">! For OS X 10.9 or later only !</h3>
+
+<ul>
+<li>Fix crashes on systems prior to Sierra</li>
+</ul>
+
+<h2 id="toc_3">3.2.0 Beta 1</h2>
 
 <ul>
 <li>New toolbar icons</li>
