--- a/notes.html
+++ b/notes.html
@@ -108,12 +108,13 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.2.1</h2>
+<h2 id="toc_1">3.3.0 Beta 1</h2>
 
 <ul>
-<li>Fix a crash on parsing some XML files</li>
-<li>Fix current feed URL not being displayed on edition of a feed</li>
-<li>Updated translations (Danish, Spanish, German, Russian)</li>
+<li>Improve loading of tabs: on application re-open, load of each tab is delayed until the user selects it</li>
+<li>Change default download location to the macOS default one</li>
+<li>Fix bug where &quot;Show in Finder&quot; in Downloads window didn&#39;t work unless file was fully downloaded</li>
+<li>Update developer documentation &amp; change tests configuration</li>
 </ul>
 
 
