--- a/notes.html
+++ b/notes.html
@@ -108,7 +108,13 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.3.0 Beta 1</h2>
+<h2 id="toc_1">3.3.0 rc 1</h2>
+
+<ul>
+<li>Fix a problem with Sparkle autoupdate</li>
+</ul>
+
+<h2 id="toc_2">3.3.0 Beta 1</h2>
 
 <ul>
 <li>Improve loading of tabs: on application re-open, load of each tab is delayed until the user selects it</li>
