add help for article list shortcut into all other translations

--- a/Vienna/Vienna Help/Resources/da.lproj/keyboard.html
+++ b/Vienna/Vienna Help/Resources/da.lproj/keyboard.html
@@ -241,6 +241,10 @@
         <p>Hopper til den næste ulæste artikel.</p>
       </td>
     </tr>
+	<tr>
+		<td>Command-Y</td>
+		<td>Opens the article list tab.</td>
+	</tr>
     <tr>
       <td>
         <p>Skift-Command-M</p>
