--- a/Vienna/Vienna Help/Resources/de.lproj/keyboard.html
+++ b/Vienna/Vienna Help/Resources/de.lproj/keyboard.html
@@ -62,6 +62,10 @@ menus. To see a contextual menu, press the Steuerung key and click the item.</p>
     <td>Springt zum nächsten ungelesen Artikel.</td>
   </tr>
   <tr>
+	  <td>Befehl-Y</td>
+	  <td>Öffnet die Artikelliste.</td>
+  </tr>
+  <tr>
     <td>Enter</td>
     <td>Öffnet die permanente Webadresse des momentanen Artikels.</td>
   </tr>
