--- a/Vienna/Vienna Help/Resources/es.lproj/keyboard.html
+++ b/Vienna/Vienna Help/Resources/es.lproj/keyboard.html
@@ -151,6 +151,10 @@
       <td>Shift-Comando-U</td>
       <td>Marca como leídos los artículos seleccionados.</td>
     </tr>
+	<tr>
+		<td>Command-Y</td>
+		<td>Opens the article list tab.</td>
+	</tr>
     <tr>
       <td>Shift-Comando-S</td>
       <td>Marca como leída la carpeta seleccionada y se desplaza a
