--- a/Vienna/Vienna Help/Resources/fr.lproj/keyboard.html
+++ b/Vienna/Vienna Help/Resources/fr.lproj/keyboard.html
@@ -260,6 +260,10 @@
       <td>Shift-⌘-U</td>
       <td>Marque les articles sélectionnés comme étant lus.</td>
     </tr>
+	<tr>
+		<td>Command-Y</td>
+		<td>Opens the article list tab.</td>
+	</tr>
     <tr>
       <td>Alt-⌘-S</td>
       <td>Ouvre l'application de messagerie par défaut et crée un
