--- a/Vienna/Vienna Help/Resources/it.lproj/keyboard.html
+++ b/Vienna/Vienna Help/Resources/it.lproj/keyboard.html
@@ -76,6 +76,10 @@
       <td>Comando-U</td>
       <td>Va all'articolo successivo non letto.</td>
     </tr>
+	<tr>
+		<td>Command-Y</td>
+		<td>Opens the article list tab.</td>
+	</tr>
     <tr>
       <td>Enter/Return</td>
       <td>Apre l'articolo selezionato nella pagina web
