--- a/Vienna/Vienna Help/Resources/cs.lproj/keyboard.html
+++ b/Vienna/Vienna Help/Resources/cs.lproj/keyboard.html
@@ -175,6 +175,10 @@ menus. To see a contextual menu, press the Control key and click the item.</p>
     <td>Moves to the next unread article.</td>
   </tr>
   <tr>
+	  <td>Command-Y</td>
+	  <td>Opens the article list tab.</td>
+  </tr>
+  <tr>
     <td>Command-Z</td>
     <td>Undoes the last action, if it can be undone.</td>
   </tr>
