--- a/Vienna/Vienna Help/Resources/zh-Hant.lproj/keyboard.html
+++ b/Vienna/Vienna Help/Resources/zh-Hant.lproj/keyboard.html
@@ -60,6 +60,10 @@
       <td>Command-U</td>
       <td>移動到下一篇未讀的文章</td>
     </tr>
+	<tr>
+		<td>Command-Y</td>
+		<td>Opens the article list tab.</td>
+	</tr>
     <tr>
       <td>Enter/Return</td>
       <td>開啟所選擇的文章的原始網頁。</td>
