--- a/notes.html
+++ b/notes.html
@@ -108,22 +108,18 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.3.0</h2>
-
-<h3 id="toc_2">Changes since 3.2.1</h3>
+<h2 id="toc_1">3.4.0 Beta 1</h2>
 
 <ul>
-<li>Improve loading of tabs: on application re-open, load of each tab is delayed until the user selects it</li>
-<li>Change default download location to the macOS default one</li>
-<li>Fix bug where &quot;Show in Finder&quot; in Downloads window didn&#39;t work unless file was fully downloaded</li>
-<li>Improve Ukrainian localization</li>
-<li>Update developer documentation &amp; change tests configuration</li>
-</ul>
-
-<h3 id="toc_3">Changes since 3.3.0 rc 1</h3>
-
-<ul>
-<li>Improve Ukrainian localization</li>
+<li>New article menu and keyboard shortcut (Command-Y) to get back to the main tab (articles list)</li>
+<li>New &quot;Share With Pinboard&quot; plugin</li>
+<li>Remove obsolete Cocoalicious plugin</li>
+<li>New lithuanian translation, contributed by Andrius Družinis-Vitkus</li>
+<li>Improved Czech, Simplified Chinese, Galician and Russian translations</li>
+<li>Fix a bug that prevented adding a feed in Simplified Chinese</li>
+<li>New framework for managing tabs (MMTabBarView instead of PSMTabBarControl)</li>
+<li>Use Carthage instead of Cocoapods to manage dependencies</li>
+<li>Project cleanup and reorganization</li>
 </ul>
 
 
