--- a/notes.html
+++ b/notes.html
@@ -108,10 +108,11 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.4.1</h2>
+<h2 id="toc_1">3.4.2</h2>
 
 <ul>
 <li>Fix crash on startup on Mac OS X 10.9 and 10.10</li>
+<li>Changed file extension for binaries upload to tar.gz (instead of .tgz) as Github&#39;s user interface got picky again</li>
 </ul>
 
 
