--- a/notes.html
+++ b/notes.html
@@ -108,12 +108,21 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.5.2</h2>
+<h2 id="toc_1">3.5.3</h2>
 
 <ul>
-<li>Fix behavior when a Javascript attemps to close a tab</li>
-<li>Refactor browser pane / browser dependency</li>
-<li>Update Sparkle to 1.21.1</li>
+<li>Fix crash with problematic feed</li>
+<li>Fix parsing of feeds without titles</li>
+<li>Use basic preemptive authentication to work around some servers which do not send 401 challenges</li>
+<li>Fix update of tabs color when window gains/loses focus</li>
+<li>Prevent Vienna from appearing among dedicated browser applications in System Preferences/General</li>
+<li>Fix usability problem with search box</li>
+<li>Add DuckDuckGo and Qwant among options for search box</li>
+<li>Fix Twitter option for search box</li>
+<li>Use https for searching</li>
+<li>Add support for dark mode to Credits</li>
+<li>Fix tooltips in folders tree</li>
+<li>Update Sparkle to 1.21.2, autorevision to 1.21</li>
 </ul>
 
 
