--- a/notes.html
+++ b/notes.html
@@ -108,16 +108,17 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.5.7</h2>
+<h2 id="toc_1">3.5.8</h2>
 
 <ul>
-<li>Fix file being hidden at end of &quot;Download image&quot;</li>
-<li>Fix crash on editing search folder</li>
-<li>Fix inaccurate information about number of unread articles</li>
-<li>Fix wrong behaviour of &quot;Move articles to Trash: After a Month&quot; preference</li>
-<li>Remove Google+ plugin ; replace it with Google Currents plugin</li>
-<li>Increase to 1000 the limit of articles fetched at once from an Open Reader feed</li>
-<li>Update Sparkle to v1.23.0 and MMTabBarView to v/1.4.7</li>
+<li>Fix crash related to macOS Big Sur Beta</li>
+<li>Fix crash related to Xcode12 (update MMTabBarView to v/1.4.8)</li>
+<li>Fix tab bar to hide when a single tab is present</li>
+<li>More fix for inaccurate info on number of unread articles</li>
+<li>Fix to unread counts discrepancies on OpenReader feeds</li>
+<li>Avoid intempestive refreshes of article pane during feed refreshes</li>
+<li>Fix resetting of article pane when no article is selected anymore and &quot;Use Web Pages for Articles&quot; is enabled</li>
+<li>Fix Vienna Tests target</li>
 </ul>
 
 
