--- a/notes.html
+++ b/notes.html
@@ -108,18 +108,12 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.5.9</h2>
+<h2 id="toc_1">3.5.10</h2>
 
 <ul>
-<li>Add toolbar icon for deleting articles</li>
-<li>Parse more tags from &#39;media&#39; namespace to get YouTube descriptions</li>
-<li>Remove support of Bitly URL shortening in plugins</li>
-<li>Speed up the cleaning of URL strings</li>
-<li>Speed up parsing of date strings</li>
-<li>Prevent crash when parsing non XML data</li>
-<li>Fix empty ArticleView on returning to same article</li>
-<li>Update to MMTabBarView v/1.4.9</li>
-<li>Fix running individual Xcode tests</li>
+<li>Fix application crashing on display of certain URLs (bug introduced by version 3.5.9) </li>
+<li>Fix a crash when both expansion tooltip and progress animation were triggered</li>
+<li>Fix an annoyance with tooltip obscuring contextual menu in article list or folder list</li>
 </ul>
 
 
