--- a/notes.html
+++ b/notes.html
@@ -108,45 +108,45 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.6.0 Beta 4</h2>
+<h2 id="toc_1">3.6.0 Beta 5</h2>
 
 <ul>
-<li>Udate to Xcode 12</li>
+<li>Silence some warnings</li>
+<li>Remove unused code</li>
+<li>Add GitHub workflow for testing</li>
 </ul>
 
-<h2 id="toc_2">3.6.0 Beta 3</h2>
+<h2 id="toc_2">3.6.0 Beta 4</h2>
+
+<ul>
+<li>Update to Xcode 12</li>
+</ul>
+
+<h2 id="toc_3">3.6.0 Beta 3</h2>
 
 <ul>
 <li>Configure Github configuration to close abandoned issues</li>
 </ul>
 
-<h2 id="toc_3">3.6.0 Beta 2</h2>
+<h2 id="toc_4">3.6.0 Beta 2</h2>
 
 <ul>
 <li>Replace deprecated methods</li>
 </ul>
 
-<h2 id="toc_4">3.6.0 Beta 1</h2>
-
-<h3 id="toc_5">! For OS X 10.11 (El Capitan) or later only !</h3>
+<h2 id="toc_5">3.6.0 Beta 1</h2>
 
 <ul>
 <li>Lift deployment target to macOS 10.11 &amp; start modernizing code</li>
 <li>Replaced MASPreferences with Storyboard implementation (Preferences window)</li>
 </ul>
 
-<h2 id="toc_6">3.5.9</h2>
+<h2 id="toc_6">3.5.10</h2>
 
 <ul>
-<li>Add toolbar icon for deleting articles</li>
-<li>Parse more tags from &#39;media&#39; namespace to get YouTube descriptions</li>
-<li>Remove support of Bitly URL shortening in plugins</li>
-<li>Speed up the cleaning of URL strings</li>
-<li>Speed up parsing of date strings</li>
-<li>Prevent crash when parsing non XML data</li>
-<li>Fix empty ArticleView on returning to same article</li>
-<li>Update to MMTabBarView v/1.4.9</li>
-<li>Fix running individual Xcode tests</li>
+<li>Fix application crashing on display of certain URLs (bug introduced by version 3.5.9) </li>
+<li>Fix a crash when both expansion tooltip and progress animation were triggered</li>
+<li>Fix an annoyance with tooltip obscuring contextual menu in article list or folder list</li>
 </ul>
 
 
