--- a/notes.html
+++ b/notes.html
@@ -108,9 +108,11 @@ sup {
 
 <h1 id="toc_0">Version Notes</h1>
 
-<h2 id="toc_1">3.9.0 Beta 1</h2>
+<h2 id="toc_1">Vienna 3.9.0</h2>
 
-<h3 id="toc_2">! Requires macOS 10.13 or higher !</h3>
+<h3 id="toc_2">! Vienna 3.9 requires macOS 10.13 or higher !</h3>
+
+<h3 id="toc_3">Changes since version 3.8.8</h3>
 
 <ul>
 <li>New editor for smart folders: criterias can now be imbricated, allowing more complex and refined selections</li>
@@ -119,21 +121,32 @@ sup {
 <li>Unified search: a single search field can be used for searching within articles, current webpage, folders list or the web.</li>
 <li>Complete transition to WkWebView based browser; reimplement printing and download, improve contextual menus; fix Web Inspector (macOS &gt;= 13.3)</li>
 <li>Use view-based cells for tree view of folders and feeds; font is no longer selectable, but user can choose between three cell sizes</li>
+<li>Rearrange some menu items in a more logical way</li>
+<li>Update documentation and default feeds to refer to Github discussions instead of the now defunct Cocoaforge forums</li>
+<li>Update localizations</li>
+<li>Have auxiliary windows (Downloads, Activity Window, Info) stay on Vienna&#39;s main space</li>
 <li>Fix compliance with refresh frequency set by user</li>
+<li>Fix &quot;mark all read&quot; for folders containing multiple smart folders</li>
 <li>Fix disappearance of tooltips on refresh</li>
-<li>Code cleanup and modernization; built with macOS 13.3 SDK</li>
-<li>Update Sparkle to version 2.4.2, MMTabBarView to v/1.5.0</li>
+<li>Fix behavior of some menu commands (Command-Y, &quot;Reload Page&quot;)</li>
+<li>Code cleanup and modernization</li>
+<li>Update FMDB to version 2.7.8, Sparkle to 2.5.2, MMTabBarView to v/1.5.2</li>
+<li>Build with Xcode 15.2 (macOS 14.2 SDK)</li>
 </ul>
 
 <p><strong>Known issue:</strong> due to some changes in preferences file format, you may have to reset sorting of folders and articles to your liking.</p>
 
-<h2 id="toc_3">3.8.8</h2>
+<h3 id="toc_4">Changes since version 3.9.0 Beta 1</h3>
 
 <ul>
-<li>Fix access to list of keyboard shortcuts in helpbook on macOS Ventura</li>
-<li>Adapt helpbook pages to dark mode</li>
-<li>Improve information on OpenReader</li>
-<li>Revert Sparkle to version 2.2.2 as a precaution</li>
+<li>Rearrange some menu items in a more logical way</li>
+<li>Update documentation and default feeds to refer to Github discussions instead of the now defunct Cocoaforge forums</li>
+<li>Update localizations</li>
+<li>Have auxiliary windows (Downloads, Activity Window, Info) stay on Vienna&#39;s main space</li>
+<li>Fix &quot;mark all read&quot; for folders containing multiple smart folders</li>
+<li>Fix behavior of some menu commands (Command-Y, &quot;Reload Page)</li>
+<li>Update FMDB to version 2.7.8, Sparkle to 2.5.2, MMTabBarView to v/1.5.2</li>
+<li>Build with Xcode 15.2 (macOS 14.2 SDK)</li>
 </ul>
 
 
